# test_stub

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml  reasonix.toml  run.sh
docs/: api_examples.md  architecture.md  chat-room-design.md  operations.md
src/mock_server/: __init__.py  admin_pages.py  admin_routes.py  auth.py  auth_views.py  cli.py  config.py  dashboard_api.py  db.py  endpoint_api.py  log_api.py  menu_api.py  models.py  response_engine.py  role_api.py  routes.py  search_api.py  seed.py  server.py  user_api.py  websocket.py  websocket_api.py
src/mock_server/static/: endpoints.html  index.html  login.html  logs.html  users.html
tests/: conftest.py  test_admin_ui.py  test_auth.py  test_cli.py  test_http_mock.py  test_integration_flow.py  test_models.py  test_response_engine.py  test_seed.py  test_websocket_mock.py
