[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-server"
version = "1.0.0"
description = "Python 3.11 based HTTP/WebSocket Mock Server with Web UI"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-jinja2>=1.6",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "click>=8.1.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-aiohttp>=1.0.5",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
]

[project.scripts]
mock-server = "mock_server.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
